--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,14 +2,12 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Programming in Python</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
+      <tr> <td>09:00</td>  <td>Programming in Python (1 of 2)</td> </tr>
+      <tr> <td>10:30</td>  <td>Morning break (15 min)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Programming in Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>Programming in Python (2 of 2)</td> </tr>
+      <tr> <td>14:30</td>  <td>Afternoon break (15 min)</td> </tr>
+      <tr> <td>16:00</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
